# omnicouncil-app

./: .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  UI_DEEP_TEST_PLAN.md  index.html  package-lock.json  package.json  playwright.config.ts
backend/: .coverage  TEST_REPORT.md  build.spec  main.py  main_v2.py  pyproject.toml  requirements.txt
backend/adapters/: __init__.py  base.py  deepseek.py  qianwen.py  registry.py
backend/api/: dashboard.py  events.py  routes.py
backend/auth/: auth_manager.py  oauth_strategy.py
backend/browser/: __init__.py  cdp_engine.py  embedded_engine.py  engine.py  factory.py
backend/browser/manager/: __init__.py  browser_manager.py
backend/config/: default.yaml
backend/engine/: contracts.py
backend/engine/collector/: __init__.py  collector.py  response.py
backend/engine/comparison/: __init__.py  engine.py  result.py
backend/engine/conflict/: __init__.py  engine.py  result.py
backend/engine/consensus/: __init__.py  engine.py  result.py
backend/engine/judge/: __init__.py  engine.py  result.py
backend/engine/layers/: __init__.py
backend/engine/scheduler/: __init__.py  scheduler.py  task.py
backend/logs/: ZERO_BASE_HEALTH_REPORT.md
backend/providers/: __init__.py  errors.py  event_bus.py  health_monitor.py  interaction_manager.py  registry_v2.py  runtime.py  selector_health.py  session_manager.py  vision_fallback.py
backend/runtime/: config_loader.py  engine.py  health_monitor.py  page_guard.py  profile_manager.py  recovery_engine.py  recovery_strategies.py  registry.py  session_bus.py  session_validator.py  state_machine.py
backend/shared/: __init__.py  app_state.py  config.py  error_types.py  errors.py  event_bus.py  instrumentation.py  logger.py  metrics.py  replay.py  trace.py  types.py
backend/storage/: __init__.py  local.py
backend/tests/: test_architecture_guard.py  test_background_window_hide.py  test_browser_engine.py  test_comparison.py  test_config.py  test_conflict_injection.py  test_conflict_judge.py  test_consensus.py  test_contracts.py  test_coverage_boost.py  test_errors.py  test_event_bus.py  test_health_monitor.py  test_integration.py  test_integration_v2.py  test_layer1.py  test_layer2.py  test_layer3.py  test_login_flow.py  test_profile_manager.py  test_profile_sharing.py  test_provider_base.py  test_provider_body_extraction.py  test_provider_runtime.py  test_query_adapter.py  test_query_adapter_coverage.py  test_recovery_engine.py  test_runtime_engine.py  test_scheduler.py  test_session_validator.py  test_smoke.py  test_state_machine.py  test_storage.py  test_stress.py  test_stress_v2.py  test_trace_metrics.py  test_websocket.py  test_ws_handlers.py
backend/ws/: connection.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  python_manager.rs
(+163 files in other folders)
