[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnicouncil-backend"
version = "2.0.0"
description = "OmniCouncil — multi-AI consensus desktop application backend"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pyyaml>=6.0",
    "patchright>=1.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
